Removed deprecated option from pom
This fixes local integration testing